fixes disclaimer issue on mobile

--- a/index-style.css
+++ b/index-style.css
@@ -73,7 +73,6 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: var(--gwhite);
-    display: flex;
     align-items: center;
     justify-content: center;
 }
